--- a/jogodaMemoriaIon-20250703T121613Z-1-001/jogodaMemoriaIon/index.html
+++ b/jogodaMemoriaIon-20250703T121613Z-1-001/jogodaMemoriaIon/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>Jogo da Memória da Ligação Iônica</h1>
+        <h1>Jogo da Memória </h1>
     </header>
 
     <main>
@@ -20,11 +20,15 @@
             </div>
             <div id="status-rodada">
                 <p>Vire 5 cartas!</p>
+
+                <p id="status-texto">Vez do Jogador 1</p>
             </div>
         </section>
 
         <section id="tabuleiro-jogo">
         </section>
+
+        <button id="botao-reiniciar">Novo Jogo</button>
     </main>
 
     <script src="script.js"></script>
