Reforma Geral no código e adição do jogo Super Trunfo.

--- a/jogodaMemoriaIon-20250703T121613Z-1-001/jogodaMemoriaIon/jogo.html
+++ b/jogodaMemoriaIon-20250703T121613Z-1-001/jogodaMemoriaIon/jogo.html
@@ -29,6 +29,6 @@
         <section id="tabuleiro-jogo"></section>
         <button id="botao-reiniciar">Novo Jogo</button>
     </main>
-    <script src="script.js"></script>
+    <script src="memoriaIonica.js"></script>
 </body>
 </html>
