--- a/jogosQuimicos/memoriaIonica.html
+++ b/jogosQuimicos/memoriaIonica.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="telas.css">
+    <link rel="stylesheet" href="memoriaIonica.css">
 </head>
 
 <body>
@@ -17,23 +18,25 @@
         <div class="header-container">
             <div class="logo-container">
                 <div class="logo-jt">
-                    <div class="logo-bolinha">
-                        <span>JT</span>
-                    </div>
+                    <div class="logo-bolinha"><span>JT</span></div>
                     <div class="logo-texto">
                         <h2>Jovens Talentos</h2>
                         <p>Memória Iônica</p>
                     </div>
                 </div>
             </div>
-
             <nav class="nav-jogo">
-                <a href="inicio.html" class="botao-voltar">
-                Voltar ao Menu
-                </a>
+                <a href="inicio.html" class="botao-voltar">Voltar ao Menu</a>
             </nav>
         </div>
     </header>
+
+    <div id="curiosidade-container" class="curiosidade-container-oculto">
+        <div id="curiosidade-popup">
+            <h3 id="curiosidade-titulo">Composto Formado!</h3>
+            <p id="curiosidade-texto"></p>
+        </div>
+    </div>
 
     <main class="main-jogo">
         <div class="jogo-container">
@@ -47,7 +50,6 @@
                                 <span class="pontos-jogador" id="pontos-j1">0</span>
                             </div>
                         </div>
-
                         <div class="placar-jogador">
                             <div class="avatar-jogador">👤</div>
                             <div class="dados-jogador">
@@ -56,7 +58,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="status-container">
                         <div class="status-indicador">
                             <span class="status-texto" id="status-texto">Vez do Jogador 1</span>
@@ -64,13 +65,11 @@
                     </div>
                 </div>
             </section>
-
             <section class="tabuleiro-section">
                 <div class="tabuleiro-container">
                     <div id="tabuleiro-jogo"></div>
                 </div>
             </section>
-
             <section class="acoes-section">
                 <button id="botao-reiniciar" class="botao-acao">
                     <span class="botao-texto">Novo Jogo</span>
@@ -78,7 +77,6 @@
             </section>
         </div>
     </main>
-
     <script src="sons.js"></script>
     <script src="memoriaIonica.js"></script>
 </body>
