--- a/jogosQuimicos/balanceamento.html
+++ b/jogosQuimicos/balanceamento.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <nav class="nav-jogo">
-                <a href="inicio.html" class="botao-voltar">Voltar ao Menu</a>
+                <a href="index.html" class="botao-voltar">Voltar ao Menu</a>
             </nav>
         </div>
     </header>
