--- a/jogosQuimicos/ranking.html
+++ b/jogosQuimicos/ranking.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="telas.css">
+    <link rel="stylesheet" href="telainicio.css">
     <style>
         .ranking-container {
             max-width: 800px;
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <nav class="nav-jogo">
-                <a href="inicio.html" class="botao-voltar">Voltar ao Menu</a>
+                <a href="index.html" class="botao-voltar">Voltar ao Menu</a>
             </nav>
         </div>
     </header>
