--- a/jogosQuimicos/balanceamento.html
+++ b/jogosQuimicos/balanceamento.html
@@ -36,16 +36,16 @@
             <section class="info-jogo-section">
                 <div class="info-container">
                     <div class="placar-jogador">
-                        <div class="avatar-jogador">🧪</div>
+                        <div class="avatar-jogador">👥</div>
                         <div class="dados-jogador">
-                            <span class="nome-jogador" id="label-j1">Pontuação</span>
+                            <span class="nome-jogador" id="label-j1">Equipe</span>
                             <span class="pontos-jogador" id="pontos-j1">0</span>
                         </div>
                     </div>
                     <div class="status-container">
                         <div class="status-indicador">
-                            <span class="status-texto" id="status-texto">Arraste os coeficientes para balancear a
-                                equação.</span>
+                            <span class="status-texto" id="status-texto">Trabalhem juntos para balancear a
+                                equação!</span>
                         </div>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
             </section>
 
             <section class="coeficientes-section">
-                <h3>Coeficientes</h3>
+                <h3>Coeficientes - Trabalhem Juntos!</h3>
                 <div id="opcoes-coeficientes">
                 </div>
             </section>
